lab1/busybox.yml
apiVersion: v1
kind: Pod
metadata:
     name: mypod
spec:
   containers:
       - name: busybox
         image: busybox
         command:
           - sleep
           - "3600"
