lab1/default-http-backend-service.yml
apiVersion: v1
kind: Service
metadata:
   name: default-http-backend
   labels:
     app: default-http-backend
spec:
 ports:
 - port: 80
   targetPort: 8080
 selector:
   app: default-http-backend
