lab1/ingress-wear.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-wear
spec:
   backend:
     serviceName: nginx-ingress
     servicePort: 80
